typescript/checker/tests/conformance/es6/Symbols/symbolProperty12.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            124,
        ),
        hi: BytePos(
            125,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolProperty12.ts:9:5
  |
9 | var i: I;
  |     ^

error: NoNewSignature {
    span: Span {
        lo: BytePos(
            139,
        ),
        hi: BytePos(
            140,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/Symbols/symbolProperty12.ts:10:9
   |
10 | i = new C;
   |         ^

error: unimplemented
expand_export_info(C)
File: $DIR/tests/conformance/es6/Symbols/symbolProperty12.ts
  --> $DIR/tests/conformance/es6/Symbols/symbolProperty12.ts:11:12
   |
11 | var c: C = i;
   |            ^

